Add components and testing
- Add the "nav-bar" component.
- Add the "carrousel" component.

--- a/src/app/get-drunk/components/drink-list/drink-list.component.html
+++ b/src/app/get-drunk/components/drink-list/drink-list.component.html
@@ -1,3 +1,8 @@
 <div *ngFor="let drink of drinks">
-    <h1>{{ drink.strDrink }}</h1>
+    <div class="card" style="width: 18rem;">
+        <img [src]="drink.strDrinkThumb" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">{{ drink.strDrink }}</h5>
+        </div>
+      </div>
 </div>
