Nav bar, footer, about page and cards v1

--- a/src/app/get-drunk/components/home-page/home-page.component.html
+++ b/src/app/get-drunk/components/home-page/home-page.component.html
@@ -1,2 +1,4 @@
 <get-drunk-carrousel></get-drunk-carrousel>
-<get-drunk-drink-list></get-drunk-drink-list>
+<div class="col-12 pt-2">
+  <get-drunk-drink-list></get-drunk-drink-list>
+</div>
