--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,8 @@
+
+<app-nav-bar></app-nav-bar>
 <get-drunk-home-page></get-drunk-home-page>
+
+<app-about-page></app-about-page>
+<app-footer></app-footer>
 
 <router-outlet></router-outlet>
