Add the search-bar component
- Add the search bar with their functionalities

--- a/src/app/shared/components/search-bar/search-bar.component.html
+++ b/src/app/shared/components/search-bar/search-bar.component.html
@@ -1,1 +1,8 @@
-<p>search-bar works!</p>
+<div class="container h-100">
+  <div class="d-flex justify-content-center h-100">
+    <div class="searchbar">
+      <input class="search_input" type="text" name="" placeholder="Buscar..." (keyup.enter)="searchTag()" #txtTagInput/>
+      <a (click)="searchTag()" class="search_icon"><i class="fas fa-search"></i></a>
+    </div>
+  </div>
+</div>
