--- a/src/app/shared/components/about-page/about-page.component.html
+++ b/src/app/shared/components/about-page/about-page.component.html
@@ -1,16 +1,9 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-</head>
-<body>
-    <div class="bg-black text-center text-white">
-        <h1>About this page</h1>
-        <p>This is a site created by three alumnees of the 'Universidad Tecnológica Nacional de Mar del Plata' with the point of learning JavaScript, HTML, Angular and CSS.</p>
-    </div>
-    <div class="bg-white text-center text-black">
-        
-    </div>
-</body>
-</html>
+<div class="bg-black text-center text-white">
+  <h1>About this page</h1>
+  <p>
+    This is a site created by three alumnees of the 'Universidad Tecnológica
+    Nacional de Mar del Plata' with the point of learning JavaScript, HTML,
+    Angular and CSS.
+  </p>
+</div>
+<div class="bg-white text-center text-black"></div>
