Update home page component

--- a/src/app/get-drunk/components/home-page/home-page.component.html
+++ b/src/app/get-drunk/components/home-page/home-page.component.html
@@ -1,4 +1,4 @@
 <get-drunk-carrousel></get-drunk-carrousel>
 <div class="col-12 pt-2">
-  <get-drunk-drink-list></get-drunk-drink-list>
+  <get-drunk-drink-list [strDrink]="'Margarita'"></get-drunk-drink-list>
 </div>
