--- a/src/app/get-drunk/components/search-drink/search-drink.component.html
+++ b/src/app/get-drunk/components/search-drink/search-drink.component.html
@@ -1,2 +1,2 @@
-<h1 class="text-white">Resultados de tu búsqueda: "{{ searchText }}"</h1>
+<h1 class="container text-white mt-3 h3">Results for: "{{ searchText }}"</h1>
 <get-drunk-drink-list [strDrink]="searchText"></get-drunk-drink-list>
