--- a/src/app/shared/components/search-bar/search-bar.component.css
+++ b/src/app/shared/components/search-bar/search-bar.component.css
@@ -1,7 +1,7 @@
 .searchbar {
   margin-bottom: auto;
   margin-top: auto;
-  height: 60px;
+  height: 40px;
   background-color: #2f3137;
   border-radius: 30px;
   padding: 10px;
@@ -14,14 +14,14 @@
   background: none;
   width: 0;
   caret-color: transparent;
-  line-height: 40px;
+  line-height: 20px;
   transition: width 0.4s linear;
 }
 
 .searchbar:hover > .search_input {
   padding: 0 10px;
-  width: 450px;
-  caret-color: black;
+  width: 200px;
+  caret-color: white;
   transition: width 0.4s linear;
 }
 
@@ -31,8 +31,8 @@
 }
 
 .search_icon {
-  height: 40px;
-  width: 40px;
+  height: 20px;
+  width: 20px;
   float: right;
   display: flex;
   justify-content: center;
