--- a/src/app/shared/components/search-bar/search-bar.component.html
+++ b/src/app/shared/components/search-bar/search-bar.component.html
@@ -1,7 +1,7 @@
 <div class="container h-100">
   <div class="d-flex justify-content-center h-100">
     <div class="searchbar">
-      <input class="search_input" type="text" name="" placeholder="Buscar..." (keyup.enter)="searchTag()" #txtTagInput/>
+      <input class="search_input" type="text" name="" placeholder="Search..." (keyup.enter)="searchTag()" #txtTagInput/>
       <a (click)="searchTag()" class="search_icon"><i class="fas fa-search"></i></a>
     </div>
   </div>
