--- a/src/app/shared/components/nav-bar/nav-bar.component.html
+++ b/src/app/shared/components/nav-bar/nav-bar.component.html
@@ -2,23 +2,13 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-black">
   <!-- Container wrapper -->
   <div class="container-fluid">
-    <!-- Toggle button -->
-    <button
-      class="navbar-toggler"
-      type="button"
-      data-mdb-toggle="collapse"
-      data-mdb-target="#navbarSupportedContent"
-      aria-controls="navbarSupportedContent"
-      aria-expanded="false"
-      aria-label="Toggle navigation"
-    >
-      <i class="fas fa-bars"></i>
-    </button>
-
     <!-- Collapsible wrapper -->
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <div>
       <!-- Navbar brand -->
-      <a routerLink="/home" class="navbar-brand mt-2 mt-lg-0">
+      <a
+        routerLink="/home"
+        class="navbar-brand mt-2 mt-lg-0 horizonFont text-white font-size-lg-16"
+      >
         <img
           class="logo"
           src="../assets/img/logo get drunk.png"
@@ -26,18 +16,8 @@
           alt="Get Drunk logo"
           loading="lazy"
         />
+        Get Drunk
       </a>
-      <!-- Left links -->
-      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-        <li class="nav-item">
-          <a
-            routerLink="/home"
-            class="nav-link horizonFont text-white font-size-lg-16"
-            >Get Drunk</a
-          >
-        </li>
-      </ul>
-      <!-- Left links -->
     </div>
     <!-- Collapsible wrapper -->
 
@@ -59,48 +39,31 @@
 
         <!-- Categories -->
         <li class="nav-item">
-          <!--
-          <a
-            class="nav-link text-white dropdown-toggle"
-            data-bs-toggle="dropdown"
-            >Categories</a
-          >
-          <ul class="dropdown-menu">
-              
+          <div class="navbar-collapse text-white">
+            <ul class="navbar-nav">
+              <li class="nav-item dropdown">
                 <a
-                  class="nav-link dropdown-toggle"
-                  href="#"
+                  class="nav-link dropdown-toggle text-white"
                   id="navbarDarkDropdownMenuLink"
                   role="button"
                   data-bs-toggle="dropdown"
                   aria-expanded="false"
                 >
-                  Dropdown
+                  Categories
                 </a>
                 <ul
                   class="dropdown-menu dropdown-menu-dark"
                   aria-labelledby="navbarDarkDropdownMenuLink"
                 >
-                  <div *ngFor="let category of categories">
-                    <li><a class="dropdown-item" href="#">{{category.strCategory}}</a></li>
-                  </div>
+                  <li *ngFor="let category of categories">
+                    <a
+                      (click)="searchCategory(category.strCategory)"
+                      class="dropdown-item text-white"
+                    >
+                      {{ category.strCategory }}
+                    </a>
+                  </li>
                 </ul>
-          </ul>
-          -->
-          <div class="collapse navbar-collapse text-white" id="navbarNavDarkDropdown">
-            <ul class="navbar-nav">
-              <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle text-white" href="#" id="navbarDarkDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                  Categories
-                </a>
-                <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="navbarDarkDropdownMenuLink" >
-            
-                  
-                  <li><a class="dropdown-item text-white" href="#"> hola </a></li>
-                  <div *ngFor="let category of categories">
-                    <li><a class="dropdown-item text-white" href="#">{{category.strCategory}}</a></li>
-                  </div>
-                  </ul>
               </li>
             </ul>
           </div>
