--- a/src/app/shared/components/nav-bar/nav-bar.component.html
+++ b/src/app/shared/components/nav-bar/nav-bar.component.html
@@ -77,7 +77,7 @@
       </ul>
 
       <!-- Favorites icon-->
-      <div>
+      <div class="nav-item" *ngIf="!userLoginOn">
         <a
           id="favoritesIcon"
           role="button"
@@ -105,7 +105,8 @@
       <!-- User -->
       <div>
         <a
-          href="#"
+          routerLink="/login"
+          routerLinkActive="true"
           id="userIcon"
           role="button"
           style="color: white; padding-right: 20px"
