--- a/src/app/shared/components/about-page/about-page.component.html
+++ b/src/app/shared/components/about-page/about-page.component.html
@@ -1,9 +1,26 @@
-<div class="bg-black text-center text-white">
+<div
+  class="rounded bg-black text-center text-white custom-center-align m-4 p-4"
+>
   <h1>About this page</h1>
   <p>
     This is a site created by three alumnees of the 'Universidad Tecnológica
     Nacional de Mar del Plata' with the point of learning JavaScript, HTML,
     Angular and CSS.
   </p>
+  <div class="container text-center mt-2">
+    <div class="row align-items-start">
+      <div class="col">
+        <img src="././assets/img/sofia.jpeg" width="200px" height="200px">
+        <p>Sofia</p>
+      </div>
+      <div class="col">
+        <img src="././assets/img/jere.jpeg" width="200px" height="200px">
+        <p>Jere</p>
+      </div>
+      <div class="col">
+        <img src="././assets/img/sol.jpeg" width="200px" height="200px">
+        <p>Sol</p>
+      </div>
+    </div>
+  </div>
 </div>
-<div class="bg-white text-center text-black"></div>
