--- a/src/app/auth/components/favorites/favorites.component.html
+++ b/src/app/auth/components/favorites/favorites.component.html
@@ -1,1 +1,7 @@
-<p>favorites works!</p>
+<div
+  class="rounded bg-black text-center text-white custom-center-align m-4 p-4"
+>
+  <div
+    class="col-md-6 col-sm-6 align-items-center"
+  ></div>
+</div>
