--- a/src/app/shared/components/nav-bar/nav-bar.component.html
+++ b/src/app/shared/components/nav-bar/nav-bar.component.html
@@ -77,7 +77,7 @@
       </ul>
 
       <!-- Favorites icon-->
-      <div class="nav-item" *ngIf="!userLoginOn">
+      <div class="nav-item" *ngIf="userLoginOn">
         <a
           id="favoritesIcon"
           role="button"
