--- a/src/app/get-drunk/components/home-page/home-page.component.html
+++ b/src/app/get-drunk/components/home-page/home-page.component.html
@@ -1,9 +1,12 @@
 <get-drunk-carrousel></get-drunk-carrousel>
 <div class="col-12 pt-2">
   <h3 class="text-white text-center">Popular drinks</h3>
-  <get-drunk-drink-list [strDrink]="'Margarita'"></get-drunk-drink-list>
+  <get-drunk-drink-list
+    [strDrink]="'Margarita'"
+    [popular]="true"
+  ></get-drunk-drink-list>
 
-  <hr class="text-white">
+  <hr class="text-white" />
   <h3 class="text-white text-center">Popular ingredients</h3>
-
+  <get-drunk-ingredients-list></get-drunk-ingredients-list>
 </div>
