--- a/src/app/shared/components/nav-bar/nav-bar.component.html
+++ b/src/app/shared/components/nav-bar/nav-bar.component.html
@@ -105,7 +105,7 @@
       <!-- User -->
       <div>
         <a
-          routerLink="/login"
+          routerLink="/register"
           routerLinkActive="true"
           id="userIcon"
           role="button"
