--- a/src/app/shared/components/about-page/about-page.component.html
+++ b/src/app/shared/components/about-page/about-page.component.html
@@ -2,25 +2,50 @@
   class="rounded bg-black text-center text-white custom-center-align m-4 p-4"
 >
   <h1>About this page</h1>
+  <div class="row align-items-start">
+    <div class="col mr-6 ml-6">
   <p>
     This is a site created by three alumnees of the 'Universidad Tecnológica
     Nacional de Mar del Plata' with the point of learning JavaScript, HTML,
-    Angular and CSS.
+    Angular and CSS. We got together with the porpuse of delivering a drink 
+    recepie application for the Laboratory IV subject and since we all work at Accenture we thoght that it will be easier for us to meet up.
   </p>
+  </div>
+  </div>
   <div class="container text-center mt-2">
     <div class="row align-items-start">
-      <div class="col">
+      <div class="col ">
         <img src="././assets/img/sofia.jpeg" width="200px" height="200px">
         <p>Sofia</p>
+        <p>She is a 20 year old student and a ServiceNow developer at Accenture Argentina. On her free time she likes to go to pilates and make potery pieces. She is also a field hockey player in Sporting club</p>
       </div>
       <div class="col">
         <img src="././assets/img/jere.jpeg" width="200px" height="200px">
         <p>Jere</p>
+        <p>Jeremias is 23 years old and its currenly working in Accenture Argentina as a ServiceNow developer. Besides work and school his interest relay on football (more specific Boca Juniors), handball and padel. </p>
       </div>
       <div class="col">
         <img src="././assets/img/sol.jpeg" width="200px" height="200px">
         <p>Sol</p>
+        <p>Sol also works in Accenture Argentina as a ServiceNow developer</p>
       </div>
     </div>
   </div>
+  <div class="container text-center mt-2">
+    <div class="row align-items-start">
+      <!--Sofia-->
+      <div class="col ">
+        <button class="btn btn-dark" href="www.linkedin.com/in/sofia-belber-8901371ab">Linkedin</button>
+      </div>
+      <!--Jere-->
+      <div class="col ">
+        <button class="btn btn-dark" href="www.linkedin.com/in/sofia-belber-8901371ab">Linkedin</button>
+      </div>
+      <!--Sol-->
+      <div class="col ">
+        <button class="btn btn-dark" href="www.linkedin.com/in/sofia-belber-8901371ab">Linkedin</button>
+      </div>
+    </div>
+  </div>
+
 </div>
