--- a/src/app/shared/components/nav-bar/nav-bar.component.html
+++ b/src/app/shared/components/nav-bar/nav-bar.component.html
@@ -104,13 +104,14 @@
 
       <!-- User -->
       <div>
-        <a
-          routerLink="/register"
+        <a 
+          routerLink="/login"
           routerLinkActive="true"
           id="userIcon"
           role="button"
           style="color: white; padding-right: 20px"
         >
+
           <svg
             xmlns="http://www.w3.org/2000/svg"
             width="20"
