--- a/src/app/auth/components/dashboard/dashboard.component.html
+++ b/src/app/auth/components/dashboard/dashboard.component.html
@@ -1,5 +1,9 @@
-<div class="bg-black text-white div">
-    <p>Name: {{userData?.name}}</p>
-    <p>Last name: {{userData?.lastName}}</p>
-    <p>Email: {{userData?.email}}</p>
+<div class="bg-black text-white div" *ngIf="user">
+    <p>Name: {{user.name}}</p>
+    <p>Last name: {{user.lastName}}</p>
+    <p>Email: {{user.email}}</p>
+
+    <button (click)="logout()" class="btn btn-danger">
+        Logout
+    </button>
 </div>
