--- a/src/app/shared/components/about-page/about-page.component.html
+++ b/src/app/shared/components/about-page/about-page.component.html
@@ -4,28 +4,38 @@
   <h1>About this page</h1>
   <div class="row align-items-start">
     <div class="col mr-6 ml-6">
-  <p>
-    This is a site created by three alumnees of the 'Universidad Tecnológica
-    Nacional de Mar del Plata' with the point of learning JavaScript, HTML,
-    Angular and CSS. We got together with the porpuse of delivering a drink 
-    recepie application for the Laboratory IV subject and since we all work at Accenture we thoght that it will be easier for us to meet up.
-  </p>
-  </div>
+      <p>
+        This is a site created by three alumnees of the 'Universidad Tecnológica
+        Nacional de Mar del Plata' with the point of learning JavaScript, HTML,
+        Angular and CSS. We got together with the porpuse of delivering a drink
+        recepie application for the Laboratory IV subject and since we all work
+        at Accenture we thoght that it will be easier for us to meet up.
+      </p>
+    </div>
   </div>
   <div class="container text-center mt-2">
     <div class="row align-items-start">
-      <div class="col ">
-        <img src="././assets/img/sofia.jpeg" width="200px" height="200px">
-        <p>Sofia</p>
-        <p>She is a 20 year old student and a ServiceNow developer at Accenture Argentina. On her free time she likes to go to pilates and make potery pieces. She is also a field hockey player in Sporting club</p>
+      <div class="col">
+        <img src="././assets/img/sofia.jpeg" width="200px" height="200px" />
+        <p>Sofía</p>
+        <p>
+          She is a 20 year old student and a ServiceNow developer at Accenture
+          Argentina. On her free time she likes to go to pilates and make potery
+          pieces. She is also a field hockey player in Sporting club
+        </p>
       </div>
       <div class="col">
-        <img src="././assets/img/jere.jpeg" width="200px" height="200px">
-        <p>Jere</p>
-        <p>Jeremias is 23 years old and its currenly working in Accenture Argentina as a ServiceNow developer. Besides work and school his interest relay on football (more specific Boca Juniors), handball and padel. </p>
+        <img src="././assets/img/jere.jpg" width="200px" height="200px" />
+        <p>Jeremías</p>
+        <p>
+          Jeremias is 23 years old and its currenly working in Accenture
+          Argentina as a ServiceNow developer. Besides work and school his
+          interest relay on football (more specific Boca Juniors), handball and
+          padel.
+        </p>
       </div>
       <div class="col">
-        <img src="././assets/img/sol.jpeg" width="200px" height="200px">
+        <img src="././assets/img/sol.jpeg" width="200px" height="200px" />
         <p>Sol</p>
         <p>Sol also works in Accenture Argentina as a ServiceNow developer</p>
       </div>
@@ -34,18 +44,68 @@
   <div class="container text-center mt-2">
     <div class="row align-items-start">
       <!--Sofia-->
-      <div class="col ">
-        <button class="btn btn-dark" href="www.linkedin.com/in/sofia-belber-8901371ab">Linkedin</button>
+      <div class="col">
+        <a
+          class="btn btn-dark"
+          href="https://www.linkedin.com/in/sofia-belber-8901371ab"
+          target="_blank"
+        >
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            width="16"
+            height="16"
+            fill="currentColor"
+            class="bi bi-linkedin"
+            viewBox="0 0 16 16"
+          >
+            <path
+              d="M0 1.146C0 .513.526 0 1.175 0h13.65C15.474 0 16 .513 16 1.146v13.708c0 .633-.526 1.146-1.175 1.146H1.175C.526 16 0 15.487 0 14.854V1.146zm4.943 12.248V6.169H2.542v7.225h2.401zm-1.2-8.212c.837 0 1.358-.554 1.358-1.248-.015-.709-.52-1.248-1.342-1.248-.822 0-1.359.54-1.359 1.248 0 .694.521 1.248 1.327 1.248h.016zm4.908 8.212V9.359c0-.216.016-.432.08-.586.173-.431.568-.878 1.232-.878.869 0 1.216.662 1.216 1.634v3.865h2.401V9.25c0-2.22-1.184-3.252-2.764-3.252-1.274 0-1.845.7-2.165 1.193v.025h-.016a5.54 5.54 0 0 1 .016-.025V6.169h-2.4c.03.678 0 7.225 0 7.225h2.4z"
+            />
+          </svg>
+        </a>
       </div>
       <!--Jere-->
-      <div class="col ">
-        <button class="btn btn-dark" href="www.linkedin.com/in/sofia-belber-8901371ab">Linkedin</button>
+      <div class="col">
+        <a
+          class="btn btn-dark"
+          href="https://www.linkedin.com/in/alexjeremiasloza"
+          target="_blank"
+        >
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            width="16"
+            height="16"
+            fill="currentColor"
+            class="bi bi-linkedin"
+            viewBox="0 0 16 16"
+          >
+            <path
+              d="M0 1.146C0 .513.526 0 1.175 0h13.65C15.474 0 16 .513 16 1.146v13.708c0 .633-.526 1.146-1.175 1.146H1.175C.526 16 0 15.487 0 14.854V1.146zm4.943 12.248V6.169H2.542v7.225h2.401zm-1.2-8.212c.837 0 1.358-.554 1.358-1.248-.015-.709-.52-1.248-1.342-1.248-.822 0-1.359.54-1.359 1.248 0 .694.521 1.248 1.327 1.248h.016zm4.908 8.212V9.359c0-.216.016-.432.08-.586.173-.431.568-.878 1.232-.878.869 0 1.216.662 1.216 1.634v3.865h2.401V9.25c0-2.22-1.184-3.252-2.764-3.252-1.274 0-1.845.7-2.165 1.193v.025h-.016a5.54 5.54 0 0 1 .016-.025V6.169h-2.4c.03.678 0 7.225 0 7.225h2.4z"
+            />
+          </svg>
+        </a>
       </div>
       <!--Sol-->
-      <div class="col ">
-        <button class="btn btn-dark" href="www.linkedin.com/in/sofia-belber-8901371ab">Linkedin</button>
+      <div class="col">
+        <a
+          class="btn btn-dark"
+          href="https://www.linkedin.com/in/maria-sol-posse-cardozo-2437b81b1/"
+          target="_blank"
+        >
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            width="16"
+            height="16"
+            fill="currentColor"
+            class="bi bi-linkedin"
+            viewBox="0 0 16 16"
+          >
+            <path
+              d="M0 1.146C0 .513.526 0 1.175 0h13.65C15.474 0 16 .513 16 1.146v13.708c0 .633-.526 1.146-1.175 1.146H1.175C.526 16 0 15.487 0 14.854V1.146zm4.943 12.248V6.169H2.542v7.225h2.401zm-1.2-8.212c.837 0 1.358-.554 1.358-1.248-.015-.709-.52-1.248-1.342-1.248-.822 0-1.359.54-1.359 1.248 0 .694.521 1.248 1.327 1.248h.016zm4.908 8.212V9.359c0-.216.016-.432.08-.586.173-.431.568-.878 1.232-.878.869 0 1.216.662 1.216 1.634v3.865h2.401V9.25c0-2.22-1.184-3.252-2.764-3.252-1.274 0-1.845.7-2.165 1.193v.025h-.016a5.54 5.54 0 0 1 .016-.025V6.169h-2.4c.03.678 0 7.225 0 7.225h2.4z"
+            />
+          </svg>
+        </a>
       </div>
     </div>
   </div>
-
 </div>
