visibility in non authenticate users
if the user is not logged in it can not search by categories or name

--- a/src/app/get-drunk/components/home-page/home-page.component.html
+++ b/src/app/get-drunk/components/home-page/home-page.component.html
@@ -1,11 +1,24 @@
-<div class="col-12 pt-2">
-  <h3 class="text-white text-center">Popular drinks</h3>
-  <get-drunk-drink-list
-    [strDrink]="'Margarita'"
-    [popular]="true"
-  ></get-drunk-drink-list>
+<div *ngIf="isLoggedIn">
+  <div class="col-12 pt-2">
+    <h3 class="text-white text-center">Popular drinks</h3>
+    <get-drunk-drink-list
+      [strDrink]="'Margarita'"
+      [popular]="true"
+    ></get-drunk-drink-list>
 
-  <hr class="text-white" />
-  <h3 class="text-white text-center">Popular ingredients</h3>
-  <get-drunk-ingredients-list></get-drunk-ingredients-list>
+    <hr class="text-white" />
+    <h3 class="text-white text-center">Popular ingredients</h3>
+    <get-drunk-ingredients-list></get-drunk-ingredients-list>
+  </div>
 </div>
+<div *ngIf="!isLoggedIn">
+  <div class="col-12 pt-2">
+    <h3 class="text-white text-center">Popular drinks</h3>
+    <get-drunk-drink-list
+      [strDrink]="'Margarita'"
+      [popular]="true"
+    ></get-drunk-drink-list>
+  </div>
+
+</div>
+
