--- a/src/app/get-drunk/components/drink-list/drink-list.component.html
+++ b/src/app/get-drunk/components/drink-list/drink-list.component.html
@@ -7,7 +7,7 @@
 
   </div>
 </div>
-<div class="bg-dark text-white my-pagination">
+<div class="bg-dark text-white my-pagination col-12 d-flex justify-content-center">
   <pagination-controls
 
   (pageChange)="page = $event"
