Random drink funtionality

--- a/src/app/shared/components/nav-bar/nav-bar.component.html
+++ b/src/app/shared/components/nav-bar/nav-bar.component.html
@@ -70,10 +70,10 @@
           </div>
         </li>
 
+
+
         <li class="nav-item">
-          <a routerLink="/" routerLinkActive="true" class="nav-link text-white"
-            >Random drink</a
-          >
+          <button class="nav-link text-white" (click)="getRandomDrink()">Random drink</button>
         </li>
       </ul>
 
