--- a/src/app/get-drunk/components/drink-card/drink-card.component.html
+++ b/src/app/get-drunk/components/drink-card/drink-card.component.html
@@ -1,10 +1,10 @@
-<a [routerLink]="['/drink', drink.idDrink]" style="text-decoration: none;">
+<!-- <a [routerLink]="['/drink', drink.idDrink]" style="text-decoration: none;"> -->
   <div class="card mb-2 text-center bg-black text-white">
     <!--<button type="button" data-id="${drink.idDrink}" class="favorite-btn btn btn-outline-white">+</button>-->
     <shared-lazy-image [url]="drink.strDrinkThumb!" [alt]="drink.strDrink!"></shared-lazy-image>
     <div class="card-body" style="font-family: Agrandir">
       <h5 class="card-title">{{ drink.strDrink || 'Drink' }}</h5>
-      <i class="far fa-heart float-right"></i>
+      <i *ngIf="isLogged" (click)="addFavorite(drink.idDrink)" class="far fa-heart float-right"></i>
     </div>
   </div>
-</a>
+<!-- </a> -->
