--- a/src/app/shared/components/about-page/about-page.component.html
+++ b/src/app/shared/components/about-page/about-page.component.html
@@ -35,9 +35,9 @@
         </p>
       </div>
       <div class="col">
-        <img src="././assets/img/sol.jpeg" width="200px" height="200px" />
+        <img src="././assets/img/sol.jpg" width="200px" height="200px" />
         <p>Sol</p>
-        <p>Sol also works in Accenture Argentina as a ServiceNow developer</p>
+        <p>Sol also works in Accenture Argentina as a ServiceNow developer. She likes to rescue stray cats and dogs that live on the street and bring them home. She has 9 dogs and 2 cats.</p>
       </div>
     </div>
   </div>
